Исправлен название класса our-team

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="our-team__container">
       <div class="our-team__image-container">
       <img class="our-team__image" src="./images/our-team__image.png">
-      <p class="out-team__name">Даниил Шабалин – DJ</p>
+      <p class="our-team__name">Даниил Шабалин – DJ</p>
     </div>
     </div>
   </section>
